# wasi-test

./: .gitignore  CMakeLists.txt
native-app/: CMakeLists.txt
scripts/: compile.py  copy.sh  run.py  run.sh
src/: test_fstat.c  test_open_close.c  test_read.c  test_readlink.c  test_readv.c  test_stat.c  test_write.c
wasm-app/: CMakeLists.txt
